<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AccModels</string>
    <string name="action_settings">Settings</string>
    <string name="viewCube">View cube</string>
    <string name="plotXString">Plot for X</string>
    <string name="plotYString">Plot for Y</string>
    <string name="plotZString">Plot for Z</string>
    <string name="xRaw">X raw</string>
    <string name="xFiltered">X filtered</string>
    <string name="yRaw">Y raw</string>
    <string name="yFiltered">Y filtered</string>
    <string name="zRaw">Z raw</string>
    <string name="zFiltered">Z filtered</string>
    <string name="tapToClose">Tap the screen to go back, hold to open settings</string>
    <string name="setColor">Set Color</string>
    <string name="useFilteredData">Use filtered data</string>
    <string name="labelPlotCube">For plotting the cube</string>
    <string name="modelToUse">Model to use</string>
    <string name="use1DModel">Use 1D model</string>
    <string name="use3DModel">Use 3D model - Weiner model</string>

</resources>
