<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelPlotCube" />

    <CheckBox
        android:id="@+id/checkBoxUseFileteredData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/useFilteredData" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modelToUse" />

    <RadioGroup
        android:id="@+id/radioGroupModels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioModel1D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/use1DModel" />

        <RadioButton
            android:id="@+id/radioModel3D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use3DModel" />
    </RadioGroup>

</LinearLayout>
