<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonViewCube"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/viewCube" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="27"
            android:orientation="vertical" >
            
            <com.androidplot.xy.XYPlot
			    android:id="@+id/plotX"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    title="@string/plotXString"/>    
			    
            <com.androidplot.xy.XYPlot
			    android:id="@+id/plotY"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    title="@string/plotYString"/>
            
            <com.androidplot.xy.XYPlot
			    android:id="@+id/plotZ"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    title="@string/plotZString"/>
            
        </LinearLayout>
</LinearLayout>
